--- a/setup-aap2.yml
+++ b/setup-aap2.yml
@@ -49,7 +49,6 @@
 
 - name: Configure RHSM on nodes and download installer
   hosts: controller,hub
-  become: true
   vars_prompt:
     - name: rhsm_user
       prompt: What is your RHSM Username (RHNID)?
@@ -73,38 +72,41 @@
         username: "{{ rhsm_user }}"
         password: "{{ rhsm_password }}"
         pool_ids: "{{ rhsm_pool_id }}"
+      become: true
+      
 
     - name: Enable required RHSM repositories
       community.general.rhsm_repository:
         name: 
           - ansible-automation-platform-2.1-for-rhel-8-x86_64-rpms
         state: enabled
+      become: true
 
     - name: Ensure all packages are updated
       yum:
         name: '*'
         state: latest
+      become: true        
   tags: setup
 
 - name: AAP Controller configuration playbook
   hosts: controller
-  become: true
   vars_prompt:
 
   tasks:
     - name: Create destination directory
       file:
-        path: /root/aap2
+        path: ~/aap2
         state: directory
 
     - name: Extract AAP2 setup content
       ansible.builtin.unarchive:
         src: "{{ hostvars['localhost']['installer_package'] }}"
-        dest: /root/aap2
+        dest: ~/aap2
 
     - name: Retrieve AAP2 folder name
       find:
-        paths: /root/aap2
+        paths: ~/aap2
         file_type: directory
       register: untar
 
@@ -117,9 +119,11 @@
       ansible.builtin.shell: 
         cmd: ./setup.sh
         chdir: "{{ untar.files[0].path }}"
+      become: true        
 
     - name: Reboot server
       reboot: 
+      become: true        
 
   tags: controller
 
@@ -129,17 +133,17 @@
   tasks:
     - name: Create destination directory
       file:
-        path: /root/aap2
+        path: ~/aap2
         state: directory
 
     - name: Extract AAP2 setup content
       ansible.builtin.unarchive:
         src: "{{ hostvars['localhost']['installer_package'] }}"
-        dest: /root/aap2
+        dest: ~/aap2
 
     - name: Get aap2 folder name
       find:
-        paths: /root/aap2
+        paths: ~/aap2
         file_type: directory
       register: untar
 
@@ -156,7 +160,10 @@
       ansible.builtin.shell:
         cmd: ./setup.sh
         chdir: "{{ untar.files[0].path }}"
+      become: true        
 
     - name: Reboot server
       reboot:
+      become: true        
+      
   tags: hub
