--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -89,7 +89,7 @@
 
     - name: Create symbolic link to RHEL image
       ansible.builtin.file:
-        src: "{{ playbook_dir }}/{{ item.version }}.iso"
+        src: "{{ playbook_dir }}/rhel.iso"
         dest: "{{ playbook_dir }}/terraform/modules/{{ item.module }}/{{ item.instance }}.iso"
         state: link
       loop: "{{ modules }}"
