--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -171,7 +171,7 @@
       become: false
 
 - name: Check connection to servers
-  hosts: servers
+  hosts: controller,hub
   gather_facts: no
   tasks:
     - name: Waiting for installation to end, it can take time!
