--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -150,17 +150,17 @@
         name: NetworkManager
         state: restarted
 
-    - name: Add servers to inventory
-      ansible.builtin.add_host:
-        hostname: "{{ item }}.{{ domain }}"
-        ansible_user: root
-        ansible_ssh_pass: redhat
-        ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
-        groups:
-          - "servers"        
-      loop:
-        - controller
-        - hub
+#   - name: Add servers to inventory
+#     ansible.builtin.add_host:
+#       hostname: "{{ item }}.{{ domain }}"
+#       ansible_user: root
+#       ansible_ssh_pass: redhat
+#       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+#       groups:
+#         - "servers"        
+#     loop:
+#       - controller
+#       - hub
 
     - name: Ensure to clean known_hosts
       ansible.builtin.known_hosts:
