--- a/aap2-setup.yml
+++ b/aap2-setup.yml
@@ -1,6 +1,8 @@
 ---
 - name: Download AAP2 Package 
-  hosts: localhost  
+  hosts: localhost
+  vars_files:
+    - lab_vars.yml
   tasks:
     - ansible.builtin.include_role:
         name: package-downloader
