fix readme and typo

--- a/aap2-setup.yml
+++ b/aap2-setup.yml
@@ -77,7 +77,7 @@
   hosts: hub
   become: true
   vars_files:
-    - rh_vars.yml  
+    - lab_vars.yml  
   tasks:
     - name: Create destination directory
       file:
