--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -14,6 +14,8 @@
 - name: This play provisions VMs for AAP2 demos
   hosts: localhost
   become: true
+  vars_files:
+    - lab_vars.yml  
   tasks:
     - name: Ensure required packages are in place
       yum: 
