--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -121,12 +121,10 @@
 
     - name: Ensure to clean known_hosts
       ansible.builtin.known_hosts:
-        host: "{{ item }}.{{ domain }}"
+        host: "{{ item.hostname }}.{{ domain }}"
         path: ~/.ssh/known_hosts
         state: absent
-      loop:
-        - controller
-        - hub
+      loop: "{{ modules }}"
       become: false
 
 - name: Check connection to servers
