Fixed README and role cleanup

--- a/aap2-setup.yml
+++ b/aap2-setup.yml
@@ -23,12 +23,5 @@
         apply:
           become: true
       vars:
-        aap2_setup_controller: true
-
-    - name: Install AAP2 automation hub
-      ansible.builtin.include_role:
-        name: aap2-setup
-        apply:
-          become: true
-      vars:
-        aap2_setup_hub: true
+        aap2_setup_controller: "{{ setup_controller | default(true) }}"
+        aap2_setup_hub: "{{ setup_hub | default(true) }}"
