--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -7,10 +7,17 @@
       ansible.builtin.include_role:
         name: package-downloader
       vars:
-        rh_product_filename: rhel.iso
-        rh_product_checksum: "{{ checksum.rhel9 }}"
+        rh_product_filename: "{{ item.filename }}"
+        rh_product_checksum: "{{ item.checksum }}"
         rh_api_offline_token: "{{ offline_token }}"
-      when: offline_token is defined and offline_token != ""
+      loop:
+        - filename: rhel8.iso
+          checksum: "{{ checksum.rhel8 }}"
+        - filename: rhel9.iso
+          checksum: "{{ checksum.rhel9 }}"
+      when:
+        - offline_token is defined
+        - offline_token != ""
 
 - name: This play provisions VMs for AAP2 demos
   hosts: localhost
