--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -31,7 +31,11 @@
       vars:
         host_modules: "{{ modules }}"
         host_domain: "{{ domain }}"
-        host_network_cidr: "{{ network_cidr }}"
+        tf_vars:
+          host_network_cidr: "{{ network_cidr }}"
+          controller_setup: false
+          hub_setup: false
+          servicecatalog_setup: false
 
     - name: Ensure to clean known_hosts
       ansible.builtin.known_hosts:
