--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -32,7 +32,7 @@
         host_modules: "{{ modules }}"
         host_domain: "{{ domain }}"
         tf_vars:
-          host_network_cidr: "{{ network_cidr }}"
+          network_cidr: ' ["{{ host_network_cidr }}"]'
           controller_setup: false
           hub_setup: false
           servicecatalog_setup: false
