--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -31,7 +31,7 @@
       vars:
         host_modules: "{{ modules }}"
         host_domain: "{{ domain }}"
-        tf_vars:
+        host_tf_vars:
           network_cidr: ' ["{{ network_cidr }}"]'
           controller_setup: false
           hub_setup: false
