--- a/provision-lab.yml
+++ b/provision-lab.yml
@@ -33,9 +33,9 @@
         host_domain: "{{ domain }}"
         host_tf_vars:
           network_cidr: ' ["{{ network_cidr }}"]'
-          controller_setup: false
-          hub_setup: false
-          servicecatalog_setup: false
+          controller_setup: "{{ setup_controller | default(true, true) }}"
+          hub_setup: "{{ setup_hub | default(true, true) }}"
+          servicecatalog_setup: "{{ setup_servicecatalog | default(false, true) }}"
 
     - name: Ensure to clean known_hosts
       ansible.builtin.known_hosts:
